CSS overflow issue for emails on Conversation member panel resolved

--- a/app/react/components/SelectableUser/index.css
+++ b/app/react/components/SelectableUser/index.css
@@ -24,5 +24,5 @@
 
 .status {
   order: 1;
-
+  flex: none;
 }
